--- a/index.html
+++ b/index.html
@@ -216,11 +216,11 @@
 			<div class="col-md-6 col-md-offset-3 text-center">
 				<div class="mockup-content">
 						<div class="morph-button wow pulse morph-button-inflow morph-button-inflow-1">
-							<button type="button "><span>Subscribe to the official Peek Youtube!</span></button>
+							<button type="button" a href= "https://www.instructables.com/id/How-to-Make-Your-Own-Electronic-Jewelry-Peek/"><span>Build Your own Jewelry!</span></button>
 							<div class="morph-content">
 								<div>
 									<div class="content-style-form content-style-form-4 ">
-										<h2 class="morph-clone">Subscribe!</h2>
+										<h2 class="morph-clone">Build Now!</h2>
 									</div>
 								</div>
 							</div>
