--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
 		<div class="container">
 			<div class="row">
 			<div class="col-md-6 col-md-offset-3 text-center white">
-				<h2>Subscribe to the official Peek Youtube!</h2>
+				<h2>Build Your own Jewelry!</h2>
 				<p class="lead" style="margin-top:0">get updated with upcoming products.</p>
 			 </div>
 			<div class="col-md-6 col-md-offset-3 text-center">
@@ -219,7 +219,7 @@
 							<button type="button" a href= "https://www.instructables.com/id/How-to-Make-Your-Own-Electronic-Jewelry-Peek/"><span>Build Your own Jewelry!</span></button>
 							<div class="morph-content">
 								<div>
-									<div class="content-style-form content-style-form-4 ">
+									<div class="content-style-form content-style-form-4 " class="button" a href="https://www.instructables.com/id/How-to-Make-Your-Own-Electronic-Jewelry-Peek/">
 										<h2 class="morph-clone">Build Now!</h2>
 									</div>
 								</div>
