--- a/index.html
+++ b/index.html
@@ -219,8 +219,8 @@
 							<button type="button" a href= "https://www.instructables.com/id/How-to-Make-Your-Own-Electronic-Jewelry-Peek/"><span>Build Your own Jewelry!</span></button>
 							<div class="morph-content">
 								<div>
-									<div class="content-style-form content-style-form-4 " class="button" a href="https://www.instructables.com/id/How-to-Make-Your-Own-Electronic-Jewelry-Peek/">
-										<h2 class="morph-clone">Build Now!</h2>
+									<div class="content-style-form content-style-form-4 " class="button">
+										<h2 class="morph-clone" a href="https://www.instructables.com/id/How-to-Make-Your-Own-Electronic-Jewelry-Peek/" target="_blank">Build Now!</h2>
 									</div>
 								</div>
 							</div>
