--- a/index.html
+++ b/index.html
@@ -206,22 +206,14 @@
           </div>
   </div>
   </div>
-  <div  class="content-section-c ">
-		<div class="container">
-			<div class="row">
-			<div class="col-md-6 col-md-offset-3 text-center white">
-				<h2>Build Your own Jewelry!</h2>
-				<p class="lead" style="margin-top:0">get updated with upcoming products.</p>
-			 </div>
-			<div class="col-md-6 col-md-offset-3 text-center">
-				<div class="mockup-content">
-						<div class="morph-button wow pulse morph-button-inflow morph-button-inflow-1">
-							<button type="button" a href= "https://www.instructables.com/id/How-to-Make-Your-Own-Electronic-Jewelry-Peek/"><span>Build Your own Jewelry!</span></button>
-							<div class="morph-content">
-								<div>
-									<div class="content-style-form content-style-form-4 " class="button">
-										<h2 class="morph-clone" a href="https://www.instructables.com/id/How-to-Make-Your-Own-Electronic-Jewelry-Peek/" target="_blank">Build Now!</h2>
-									</div>
+</br> </br> </br>
+    <div  class=“content-section-c” >
+      <div class=“container”>
+        <div class=“row”>
+        <div class=“col-md-6 col-md-offset-3 text-center white”>
+          <h2>build your own umbrella</h2>
+          <p class=“lead” style=“margin-top:0"><a class=“btn btn-embossed btn-primary” href=“https://www.instructables.com/id/How-to-Make-Your-Own-Electronic-Jewelry-Peek/” role=“button” target=“_blank”>find the instructions on Instructables</a></p>
+         </div>
 								</div>
 							</div>
 						</div>
