--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
 			<div class="row">
 			<div class="col-md-6 col-md-offset-3 text-center white">
 				<h2>Build Your own Jewelry!</h2>
-				<p class="lead" style="margin-top:0"><a class="btn btn-embossed btn-primary" href="https://www.instructables.com/id/How-to-Make-Your-Own-Electronic-Jewelry-Peek/" role="button" target="_blank">Find the Intructions on Intructable</p>
+				<p class="lead" style="margin-top:0"><a class="btn btn-embossed btn-primary" href="https://www.instructables.com/id/How-to-Make-Your-Own-Electronic-Jewelry-Peek/" role="button" target="_blank">Find the Intructions on Intructable</p></a>
 			 </div>
 
 									</div>
